# lichen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  build.py  build_backend.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  architecture_mermaid.md  index.md  lichen_manuscript.md  manuscript_alignment_revision.md
docs/theory/: approximations.md  derivations.md  notation.md  physical_model.md
docs/tutorials/: end_to_end_demo.ipynb
examples/: README.md  lichen_validation.ipynb
examples/QEC_examples/: QEC_examples.ipynb  Rotated_Surface_d2.py  Rotated_Surface_d3_memory_x.py  Shor_9-1-3.py
src/lichen/: __init__.py  block_fault_export.py  block_partition.py  block_pauli_projector.py  block_probability_search.py  block_propagator.py  block_sampler.py  block_structure_analyzer.py  block_template_cache.py  circuit.py  frame_tracker.py  hidden_memory.py  model.py  pauli.py  segment_generators.py
tests/: __init__.py  test_direction.md  test_frame_mapping.py  test_smoke.py
