[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "lichen-stim"
version = "0.1.0"
description = "Blockwise hidden-memory simulator for correlated environment noise"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Wenzheng Dong" }]
keywords = ["hidden-memory", "noise", "quantum", "simulation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
